--- a/client/src/app/orders/orders-list-item/orders-list-item.component.html
+++ b/client/src/app/orders/orders-list-item/orders-list-item.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div>
-      <span [ngClass]="['h-fit', 'text-center', orderStatusesColors[order.status]]">{{orderStatuses[order.status]}}</span>
+      <span [ngClass]="['h-fit', 'text-center', statusesColors[order.status]]">{{orderStatuses[order.status]}}</span>
     </div>
 
     <div class="grid grid-flow-row grid-rows-[auto_1fr] gap-y-3">
