--- a/client/src/app/orders/order-details/order-details.component.html
+++ b/client/src/app/orders/order-details/order-details.component.html
@@ -44,7 +44,7 @@
 
       <div class="mt-3" *ngFor="let proposal of order.proposals; let i = index">
         <div class="grid grid-cols-2 gap-x-4 text-base">
-          <div class="flex flex-col justify-center gap-y-2 border border-[#2FCB80] rounded-lg p-3">
+          <div class="flex flex-col justify-center gap-y-2 border border-[#2FCB80] rounded-lg p-3 relative">
             <!-- <p>{{ i+1 }}. Постачальник: {{ proposal.supplierContactPerson.companyName }}</p> -->
             <p>{{ i+1 }}. <span class="font-semibold text-[#2FCB80]">Інформація про постачальника</span></p>
             <p>{{ proposal.supplierContactPerson.companyName }}</p>
@@ -55,6 +55,8 @@
             <p class="font-semibold text-[#2FCB80]">Контактна особа</p>
             <p>ПІБ: {{ getFullName(proposal.supplierContactPerson) }}</p>
             <p>Пошта: {{ proposal.supplierContactPerson.email }}</p>
+            <p [ngClass]="['absolute', 'right-3', 'top-3', statusesColors[proposal.status]]">{{ proposalStatuses[proposal.status] }}</p>
+            <app-button *ngIf="user?.id === proposal.supplierContactPerson.id && proposal.status === 'Active'" text="Скасувати" type="button" [classList]="['absolute', 'bottom-5', 'right-3', 'border', 'border-[#E74C3C]', 'h-[45px]', 'w-[152px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelProposal(proposal.id)"></app-button>
           </div>
           <div class="flex flex-col justify-center gap-y-2 border border-[#2FCB80] rounded-lg p-3" *ngIf="proposal.transporterContactPerson">
             <p>Перевізник: {{ proposal.transporterContactPerson.companyName }}</p>
