--- a/client/src/app/requests/requests-list-item/requests-list-item.component.html
+++ b/client/src/app/requests/requests-list-item/requests-list-item.component.html
@@ -7,7 +7,7 @@
       <p class="mt-3 italic text-[#A9A9A9]">{{request.description}}</p>
       <p class="mt-3">Бюджет: {{request.budget}} (грн.)</p>
     </div>
-    <span [ngClass]="['h-fit', 'text-center', requestStatusesColors[request.status]]">{{requestStatuses[request.status]}}</span>
+    <span [ngClass]="['h-fit', 'text-center', statusesColors[request.status]]">{{requestStatuses[request.status]}}</span>
     <div class="grid grid-flow-row grid-rows-[auto_1fr] gap-y-3">
       <p class="text-right italic text-[#A9A9A9] text-sm">Створена {{request.createdAt | date:'HH:mm:ss dd MMMM y':'uk-UA'}}</p>
 
