--- a/client/src/app/orders/submit-proposal-modal/submit-proposal-modal.component.html
+++ b/client/src/app/orders/submit-proposal-modal/submit-proposal-modal.component.html
@@ -1,20 +1,22 @@
 <app-modal-container [width]="'450px'" [title]="'Подання пропозиції'" [showClose]="true">
   <div mat-dialog-content>
     <form class="w-full mt-3" [formGroup]="proposalForm" (ngSubmit)="onSubmit()">
-      <p class="mb-2">Адреса відвантаження <span class="text-red-600">*</span></p>
-      <app-dropdown *ngIf="shipmentAddressExists" [control]="getFormControl('shipmentAddressId')" [displayPropFunc]="tranformAddress" [displayLabel]="false" [items]="(addresses$ | async)" errorMessage="Адреса відвантаження має бути обрана">
-        <p class="text-sm italic">Не знайшли адресу у списку? <span class="underline text-[#2CA9D5] cursor-pointer" (click)="toggleShipmentAddressExistence()">Натисність,</span> щоб додати нову</p>
-      </app-dropdown>
-      <div *ngIf="!shipmentAddressExists">
-        <app-input label="Місто" [control]="getFormControl('city')"></app-input>
-        <app-input label="Область" [control]="getFormControl('region')" [required]="false"></app-input>
-        <app-input label="Вулиця" [control]="getFormControl('street')"></app-input>
-        <app-input label="Номер будівлі" [control]="getFormControl('buildingNumber')" [required]="false"></app-input>
-        <app-input label="Поштовий індекс" [control]="getFormControl('zipCode')"></app-input>
+      <div *ngIf="data.userRole === 'Постачальник'">
+        <p class="mb-2">Адреса відвантаження <span class="text-red-600">*</span></p>
+        <app-dropdown *ngIf="shipmentAddressExists" [control]="getFormControl('shipmentAddressId')" [displayPropFunc]="tranformAddress" [displayLabel]="false" [items]="(addresses$ | async)" errorMessage="Адреса відвантаження має бути обрана">
+          <p class="text-sm italic">Не знайшли адресу у списку? <span class="underline text-[#2CA9D5] cursor-pointer" (click)="toggleShipmentAddressExistence()">Натисність,</span> щоб додати нову</p>
+        </app-dropdown>
+        <div *ngIf="!shipmentAddressExists">
+          <app-input label="Місто" [control]="getFormControl('city')"></app-input>
+          <app-input label="Область" [control]="getFormControl('region')" [required]="false"></app-input>
+          <app-input label="Вулиця" [control]="getFormControl('street')"></app-input>
+          <app-input label="Номер будівлі" [control]="getFormControl('buildingNumber')" [required]="false"></app-input>
+          <app-input label="Поштовий індекс" [control]="getFormControl('zipCode')"></app-input>
+        </div>
       </div>
 
       <app-textarea label="Додаткова інформація" [control]="getFormControl('additionalInfo')" [required]="false"></app-textarea>
-      <app-input label="Ціна (грн.)" [control]="getFormControl('price')"></app-input>
+      <app-input [label]="label" [control]="getFormControl('price')"></app-input>
 
       <p class="text-center italic"><span class="text-red-600">*</span> позначені обов'язкові поля</p>
       <p class="mt-2 text-center text-red-600 h-[20px]">{{(error$ | async) ?? ''}}</p>
