--- a/client/src/app/orders/orders-list-item/orders-list-item.component.html
+++ b/client/src/app/orders/orders-list-item/orders-list-item.component.html
@@ -17,7 +17,7 @@
       </p>
       <div class="grid justify-center items-center" *ngIf="(user$ | async) as user">
         <app-button text="Деталі" type="button" [classList]="['h-[45px]', 'w-[152px]']" (click)="openOrderDetails()"></app-button>
-        <div *ngIf="user.id === order?.buyerContactPerson.id && order?.status === 'Active' && user.role === 'Замовник'">
+        <div *ngIf="user.id === order?.buyerContactPerson.id && order?.status === 'Active' && user.role === Roles.Customer">
           <app-button text="Скасувати" type="button" [classList]="['border', 'border-[#E74C3C]', 'h-[45px]', 'w-[152px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelOrder()"></app-button>
         </div>
       </div>
