--- a/client/src/app/orders/orders-list-item/orders-list-item.component.html
+++ b/client/src/app/orders/orders-list-item/orders-list-item.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div>
-      <span [ngClass]="['h-fit', 'text-center', statusesColors[order.status]]">{{orderStatuses[order.status]}}</span>
+      <span [ngClass]="['h-fit', 'text-center', StatusesColors[order.status]]">{{OrderStatuses[order.status]}}</span>
     </div>
 
     <div class="grid grid-flow-row grid-rows-[auto_1fr] gap-y-3">
@@ -17,7 +17,7 @@
       </p>
       <div class="grid justify-center items-center" *ngIf="(user$ | async) as user">
         <app-button text="Деталі" type="button" [classList]="['h-[45px]', 'w-[152px]']" (click)="openOrderDetails()"></app-button>
-        <div *ngIf="user.id === order?.buyerContactPerson.id && order?.status === 'Active' && user.role === Roles.Customer">
+        <div *ngIf="user.id === order.buyerContactPerson.id && OrderStatuses[order.status] === OrderStatuses.Active && user.role === Roles.Customer">
           <app-button text="Скасувати" type="button" [classList]="['border', 'border-[#E74C3C]', 'h-[45px]', 'w-[152px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelOrder()"></app-button>
         </div>
       </div>
