--- a/client/src/app/requests/requests-list-item/requests-list-item.component.html
+++ b/client/src/app/requests/requests-list-item/requests-list-item.component.html
@@ -7,16 +7,16 @@
       <p class="mt-3 italic text-[#A9A9A9]">{{request.description}}</p>
       <p class="mt-3">Бюджет: {{request.budget}} (грн.)</p>
     </div>
-    <span [ngClass]="['h-fit', 'text-center', statusesColors[request.status]]">{{requestStatuses[request.status]}}</span>
+    <span [ngClass]="['h-fit', 'text-center', StatusesColors[request.status]]">{{RequestStatuses[request.status]}}</span>
     <div class="grid grid-flow-row grid-rows-[auto_1fr] gap-y-3">
       <p class="text-right italic text-[#A9A9A9] text-sm">Створена {{request.createdAt | date:'HH:mm:ss dd MMMM y':'uk-UA'}}</p>
 
       <div class="grid justify-center items-center" *ngIf="(user$ | async) as user">
-        <div class="grid justify-center" *ngIf="user.subdivisionId === request?.subdivision?.id && request?.status === 'Active' && user.role === Roles.Applicant">
+        <div class="grid justify-center" *ngIf="user.subdivisionId === request.subdivision?.id && RequestStatuses[request.status] === RequestStatuses.Active && user.role === Roles.Applicant">
           <app-button text="Редагувати" type="button" [classList]="['h-[45px]', 'w-[152px]']" (click)="openEditRequestDialog()"></app-button>
           <app-button text="Скасувати" type="button" [classList]="['mt-2', 'border', 'border-[#E74C3C]', 'h-[45px]', 'w-[152px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelRequest()"></app-button>
         </div>
-        <div *ngIf="request?.status === 'Active' && user.role === Roles.Customer">
+        <div *ngIf="user.role === Roles.Customer">
           <app-button *ngIf="!(orderRequests$ | async)?.includes(request.id); else removeFromOrderBtn" text="Додати до замовлення" type="button" [classList]="['h-[45px]', 'w-[209px]']" (click)="addRequestToOrder()"></app-button>
           <ng-template #removeFromOrderBtn>
             <app-button text="Прибрати із замовлення" type="button" [classList]="['h-[45px]', 'w-[209px]', 'border', 'border-[#E74C3C]']" (click)="deleteRequestFromOrder()" [colors]="['bg-transparent', 'text-[#E74C3C]']"></app-button>
