--- a/client/src/app/orders/order-details/order-details.component.html
+++ b/client/src/app/orders/order-details/order-details.component.html
@@ -9,15 +9,15 @@
         <p>Номер замовлення: {{ order.id }}</p>
         <p>Статус: {{ OrderStatuses[order.status] }}</p>
         <p>Бюджет: {{ order.budget }} (грн.)</p>
-        <div class="flex flex-col justify-center gap-y-2" >
+        <div class="flex flex-col justify-center gap-y-2" *ngIf="OrderStatuses[order.status] === OrderStatuses.Processed">
           <p>Ціна від постачальника: {{ order.supplierPrice }} (грн.)</p>
-          <p>Ціна від перевізника: {{ order.transporterSum }} (грн.)</p>
-          <p>Сума: {{ order.supplierPrice + order.transporterSum }} (грн.)</p>
+          <p *ngIf="isCategoryTypeGoods(order)">Ціна від перевізника: {{ order.transporterSum }} (грн.)</p>
+          <p *ngIf="isCategoryTypeGoods(order)">Сума: {{ order.supplierPrice + order.transporterSum }} (грн.)</p>
         </div>
-        <p class="font-semibold text-[#2FCB80]">Адреса доставки</p>
+        <p class="font-semibold text-[#2FCB80]">Адреса доставки/постачання</p>
         <p>{{ tranformCompanyAddress(order.deliveryAddress) }}</p>
-        <div class="flex flex-col justify-center gap-y-2" >
-          <p class="font-semibold text-[#2FCB80]" *ngIf="OrderStatuses[order.status] === OrderStatuses.Processed">Адреса відвантаження</p>
+        <div class="flex flex-col justify-center gap-y-2" *ngIf="OrderStatuses[order.status] === OrderStatuses.Processed && isCategoryTypeGoods(order)">
+          <p class="font-semibold text-[#2FCB80]" >Адреса відвантаження</p>
           <p>{{ tranformCompanyAddress(order.shipmentAddress) }}</p>
         </div>
       </div>
@@ -53,11 +53,11 @@
         <h3 class="font-semibold text-xl text-[#2FCB80]">Пропозиції</h3>
         <p class="mt-4" *ngIf="order.proposals.length === 0">Пропозицій немає</p>
         <div class="mt-4" *ngIf="user && user.role === Roles.Supplier && !anySupplierProposals(order) && OrderStatuses[order.status] === OrderStatuses.Active">
-          <app-button text="Подати пропозицію" type="button" [classList]="['border', 'border-[#2FCB80]', 'h-[45px]', 'w-auto']" [colors]="['bg-transparent', 'text-[#2FCB80]']" (click)="openSubmitProposalDialog()"></app-button>
+          <app-button text="Подати пропозицію" type="button" [classList]="['border', 'border-[#2FCB80]', 'h-[45px]', 'w-auto']" [colors]="['bg-transparent', 'text-[#2FCB80]']" (click)="openSubmitProposalDialog(order.categoryType)"></app-button>
         </div>
 
         <div class="mt-3" *ngFor="let proposal of order.proposals; let i = index">
-          <div class="grid gap-x-4 text-base" [ngClass]="user?.role === Roles.Customer ? 'grid-cols-[40%_40%_1fr]': 'grid-cols-2'">
+          <div class="grid gap-x-4 text-base" [ngClass]="{'grid-cols-[40%_40%_1fr]': user?.role === Roles.Customer && isCategoryTypeGoods(order), 'grid-cols-[40%_15%] gap-x-8': user?.role === Roles.Customer && !isCategoryTypeGoods(order), 'grid-cols-2': user?.role !== Roles.Customer}">
             <div class="flex flex-col justify-center gap-y-2 border border-[#2FCB80] rounded-lg p-3 relative">
 
               <app-order-info [person]="proposal.supplierContactPerson" [getFullName]="getFullName" [tranformCompanyAddress]="tranformCompanyAddress" [shipmentAddress]="proposal.shipmentAddress" [additionalInfo]="proposal.supplierAdditionalInfo" [price]="proposal.supplierPrice">
@@ -66,22 +66,22 @@
 
               <p [ngClass]="['absolute', 'right-3', 'top-3', StatusesColors[proposal.status]]">{{ ProposalStatuses[proposal.status] }}</p>
               <div class="absolute bottom-5 right-5 grid grid-flow-row gap-y-4 min-w-[172px]">
-                <app-button *ngIf="(user?.role === Roles.Transporter || proposal.supplierContactPerson.id === user?.id) && ProposalStatuses[proposal.status] === ProposalStatuses.Active && !anyTransporterProposals(order, proposal.supplierContactPerson.companyId)" text="Подати пропозицію" type="button" [classList]="['border', 'border-[#2FCB80]', 'h-[45px]', 'w-full']" [colors]="['bg-transparent', 'text-[#2FCB80]']" (click)="openSubmitProposalDialog(proposal.id)"></app-button>
+                <app-button *ngIf="(user?.role === Roles.Transporter || proposal.supplierContactPerson.id === user?.id) && isProposalStatusActive(proposal) && !anyTransporterProposals(order, proposal.supplierContactPerson.companyId) && isCategoryTypeGoods(order)" text="Подати пропозицію" type="button" [classList]="['border', 'border-[#2FCB80]', 'h-[45px]', 'w-full']" [colors]="['bg-transparent', 'text-[#2FCB80]']" (click)="openSubmitProposalDialog(order.categoryType, proposal.id)"></app-button>
 
-                <app-button *ngIf="user?.id === proposal.supplierContactPerson.id && ProposalStatuses[proposal.status] === ProposalStatuses.Active" text="Скасувати" type="button" [classList]="['border', 'border-[#E74C3C]', 'h-[45px]', 'w-full']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelProposal(proposal.id)"></app-button>
+                <app-button *ngIf="user?.id === proposal.supplierContactPerson.id && isProposalStatusActive(proposal)" text="Скасувати" type="button" [classList]="['border', 'border-[#E74C3C]', 'h-[45px]', 'w-full']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelProposal(proposal.id)"></app-button>
               </div>
             </div>
 
-            <div class="flex flex-col gap-y-2 border border-[#2FCB80] rounded-lg p-3 relative" *ngIf="proposal.transporterContactPerson">
+            <div class="flex flex-col gap-y-2 border border-[#2FCB80] rounded-lg p-3 relative" *ngIf="proposal.transporterContactPerson && isCategoryTypeGoods(order)">
 
               <app-order-info [person]="proposal.transporterContactPerson" [getFullName]="getFullName" [tranformCompanyAddress]="tranformCompanyAddress" [additionalInfo]="proposal.transporterAdditionalInfo" [price]="proposal.transporterSum">
                 <p class="font-semibold text-[#2FCB80]">Інформація про перевізника</p>
               </app-order-info>
 
-              <app-button *ngIf="user?.id === proposal.transporterContactPerson.id && ProposalStatuses[proposal.status] === ProposalStatuses.Active" text="Скасувати" type="button" [classList]="['absolute', 'bottom-5', 'right-5', 'border', 'border-[#E74C3C]', 'h-[45px]', 'min-w-[172px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelProposal(proposal.id, proposal.transporterContactPerson.id === user?.id ? true : false)"></app-button>
+              <app-button *ngIf="user?.id === proposal.transporterContactPerson.id && isProposalStatusActive(proposal)" text="Скасувати" type="button" [classList]="['absolute', 'bottom-5', 'right-5', 'border', 'border-[#E74C3C]', 'h-[45px]', 'min-w-[172px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelProposal(proposal.id, proposal.transporterContactPerson.id === user?.id ? true : false)"></app-button>
             </div>
 
-            <div *ngIf="user?.role === Roles.Customer && ProposalStatuses[proposal.status] === ProposalStatuses.Active && proposal.transporterContactPerson?.id" class="flex flex-col items-center justify-center gap-y-4">
+            <div *ngIf="user?.role === Roles.Customer && isProposalStatusActive(proposal) && (proposal.transporterContactPerson || (proposal.supplierContactPerson && !isCategoryTypeGoods(order)))" class="flex flex-col items-center justify-center gap-y-4">
               <p>Загальна сума: <br>{{ getProposalTotalSum(proposal) }} (грн.)</p>
               <app-button text="Обрати пропозицію" type="button" [classList]="['h-[45px]', 'w-auto']" (click)="chooseProposal(proposal.id)"></app-button>
             </div>
