--- a/client/src/app/orders/order-info/order-info.component.html
+++ b/client/src/app/orders/order-info/order-info.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col justify-center gap-y-2">
   <!-- <p class="font-semibold text-[#2FCB80]">{{ label }}</p> -->
   <ng-content></ng-content>
-  <p>{{ person.companyName }}</p>
+  <p>{{ person.companyTitle }}</p>
   <p>Код ЄДРПОУ: {{ person.companyEdrpou }}</p>
   <p *ngIf="showCompanyAddress">Адреса: {{ tranformCompanyAddress(person.companyAddress) }}</p>
   <p *ngIf="shipmentAddress">Адреса відвантаження: {{ tranformCompanyAddress(shipmentAddress) }}</p>
