--- a/client/src/app/orders/orders-list-item/orders-list-item.component.html
+++ b/client/src/app/orders/orders-list-item/orders-list-item.component.html
@@ -3,7 +3,7 @@
     <div>
       <h3 class="font-semibold text-xl text-[#2FCB80]">{{order.title}}</h3>
       <p class="mt-3 underline">Номер: {{ order.id }}</p>
-      <p class="mt-3">{{ order.buyerContactPerson.companyName }}</p>
+      <p class="mt-3">{{ order.buyerContactPerson.companyTitle }}</p>
       <p class="mt-3">Бюджет: {{order.budget}} (грн.)</p>
     </div>
 
