--- a/client/src/app/orders/orders-container/orders-container.component.html
+++ b/client/src/app/orders/orders-container/orders-container.component.html
@@ -3,8 +3,8 @@
     <app-orders-actions></app-orders-actions>
   </div>
   <div class="grid grid-rows-[45px_1fr] gap-y-6">
-    <div class="flex flex-row justify-between items-center">
-      <h1 class="text-2xl font-medium justify-self-start">Замовлення</h1>
+    <div class="flex items-center">
+      <h1 class="text-2xl font-medium">Замовлення</h1>
     </div>
     <app-orders-list></app-orders-list>
   </div>
